--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-component-one (myAction)="myActionOutput($event)"></app-component-one>
-<app-component-two></app-component-two>
-{{textTemp}}
+<app-component-two [inputVar]="textTemp"></app-component-two>
