--- a/src/app/component-one/component-one.component.html
+++ b/src/app/component-one/component-one.component.html
@@ -1,4 +1,4 @@
 <div style="background-color: #f5f5f5;padding: 10px;">
-    <p>component-one works!</p>
+    <input type="text" [(ngModel)]="myText">
     <button type="button" (click)="onClickAction()">Acción</button>
 </div>
