--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-component-one (myAction)="myActionOutput($event)"></app-component-one>
 <app-component-two [inputVar]="textTemp"></app-component-two>
+<div>
+    <app-como-one></app-como-one>
+    <app-como-two></app-como-two>
+</div>
