Feat: 02-06-2023 - Suscripción de un segundo componente a observable.
Suscripción de un segundo componente para ver el funcionamiento de un observable.

--- a/src/app/como-two/como-two.component.html
+++ b/src/app/como-two/como-two.component.html
@@ -1,3 +1,13 @@
-<div style="background-color: #cccccc;display: inline-block;vertical-align: top;width: 200px;">
-	como-two
+<div style="background-color: #f5f5f5;display: inline-block;vertical-align: top;width: 200px;">
+	<div style="text-align: center;">
+		<button type="button" (click)="xSuscribe()" [disabled]="mySubscription != null">Suscribirme</button>
+		<button type="button" (click)="xUnsuscribe()" [disabled]="mySubscription == null">Desuscribirme</button>
+	</div>
+	<div>
+		<ul>
+			<li *ngFor="let item of myObservableResponse">
+				{{item}}
+			</li>
+		</ul>
+	</div>
 </div>
